# otus_pb_final_work

./: .gitignore  README.md  docker-compose.yml
bot/: Dockerfile  alembic.ini  bot.py  config.py  pyproject.toml
bot/db/: __init__.py  models.py  requests.py
bot/db/migration/: env.py
bot/db/migration/versions/: 0f9462045173_init.py  67df41bd4591_init.py  f1892a7b01b4_change_column_type.py
bot/handlers/: __init__.py  add_notifications.py  basic_commands.py  dagster_get_runs.py  management_notifications.py
dagster/: Dockerfile_dagster  Dockerfile_user_code  dagster.yaml  repo.py
dagster/resource/: telegram_notification_resources.py
dagster/tests/: test_deploy_docker.py
dagster/utils/: base_utils.py  telegram_notification_utils.py
docker-volume/db-data-postgres/: postgresql.conf
docker-volume/db-init/: 1. init-db-and-users.sql
